Fixed collapsing header problem

--- a/css/style.css
+++ b/css/style.css
@@ -42,28 +42,30 @@ html, body {
   border: 0; }
 
 body {
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: flex-start;
-  align-items: stretch;
   font-family: 'Muli', -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   background: #f5f5f6; }
+  @media (min-width: 800px) {
+    body {
+      display: flex;
+      flex-flow: column nowrap;
+      justify-content: flex-start;
+      align-items: stretch; } }
   @media (max-width: 600px) {
     body {
       height: auto;
       flex-direction: column;
-      font-size: .85rem; } }
+      font-size: .95rem; } }
 
 main {
   width: 100%;
-  padding: 4rem 4rem 0;
-  overflow: scroll; }
-  main > * {
-    max-width: 1200px; }
-  main section {
-    border-top: 3px solid #0a99e0;
-    padding: 1rem;
-    background: #fff; }
+  padding-top: 50px;
+  padding-bottom: 0;
+  padding-left: 4rem;
+  padding-right: 4rem; }
+  @media (max-width: 1000px) {
+    main {
+      padding-left: .25rem;
+      padding-right: .25rem; } }
   @media (max-width: 620px) {
     main {
       padding-top: 2rem;
@@ -74,10 +76,12 @@ main {
       padding-top: 1rem;
       padding-left: 1rem;
       padding-right: 1rem; } }
+  main section {
+    padding: 1rem; }
 
 article {
   width: 100%;
-  margin: 0 0 2rem; }
+  margin: 0; }
 
 .list-row {
   display: flex;
@@ -85,14 +89,30 @@ article {
   justify-content: flex-start;
   align-items: flex-start;
   list-style: none;
+  margin: 0;
   padding-left: 0; }
-  .list-row li {
-    margin-bottom: 20px; }
-    .list-row li span {
+  .list-row > li {
+    width: 100%;
+    margin-bottom: 1rem; }
+    @media (max-width: 800px) {
+      .list-row > li {
+        padding-left: 1rem; } }
+    .list-row > li:last-child {
+      margin-bottom: 0; }
+    .list-row > li span {
       display: block;
       font-size: .7rem;
       font-style: italic;
       color: gray; }
+    .list-row > li ul li {
+      margin-bottom: .25rem; }
+      @media (max-width: 800px) {
+        .list-row > li ul li {
+          width: 100%; } }
+    @media (max-width: 800px) {
+      .list-row > li {
+        width: 33.3333%;
+        margin-bottom: 2rem; } }
 
 h1 {
   margin-bottom: 4px;
@@ -111,15 +131,11 @@ h2 {
       margin-bottom: .5rem; } }
 
 h3 {
-  display: inline-block;
-  margin-bottom: 12px;
-  padding: 0 40px 0 10px;
-  border-radius: 1px;
-  background: #1e5799;
-  font-weight: 500;
+  margin-bottom: 2rem;
+  font-size: 16px;
   text-transform: uppercase;
-  color: #fff;
-  box-shadow: 5px 5px 0px 0px rgba(53, 125, 163, 0.35); }
+  text-align: center;
+  color: darkgray; }
 
 h4 {
   margin-bottom: .25rem;
@@ -133,9 +149,6 @@ ul {
   padding-left: 1.2rem;
   font-weight: 300; }
 
-li:not(:last-child) {
-  margin-bottom: .25rem; }
-
 a {
   font-weight: 300;
   text-decoration: none;
@@ -148,7 +161,7 @@ header {
   align-items: center;
   text-align: center;
   color: #000;
-  padding: 3.25rem 2rem;
+  padding: 2rem;
   border-bottom: 1px solid #e8e8e9;
   background: #fff; }
   @media (max-width: 800px) {
@@ -274,9 +287,8 @@ footer {
   flex-flow: row nowrap;
   justify-content: space-between;
   align-items: flex-start;
-  padding-top: .25rem;
   text-align: center;
-  padding-top: 10px; }
+  margin-top: 50px; }
   footer .contact {
     text-align: right; }
     @media (max-width: 920px) {
@@ -334,23 +346,19 @@ footer {
 .grid {
   display: flex;
   flex-flow: row nowrap;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: flex-start; }
-  @media (min-width: 1050px) {
-    .grid {
-      flex-direction: row; } }
-
-.col {
-  padding: .5rem; }
   @media (max-width: 800px) {
-    .col {
-      width: 100%; } }
+    .grid {
+      flex-direction: column-reverse; } }
 
 .col--sidebar {
-  width: 20%; }
-
-.col--body {
-  width: 80%; }
+  max-width: 320px; }
+  @media (max-width: 800px) {
+    .col--sidebar {
+      width: 100%;
+      max-width: none;
+      margin-top: 2rem; } }
 
 .banner {
   display: flex;
@@ -390,6 +398,18 @@ footer {
   @media (max-width: 800px) {
     .contain {
       width: 100%; } }
+
+.card {
+  margin: 0;
+  padding: 1rem 2rem;
+  border: 1px solid #e8e8e9;
+  background: #fff; }
+  .card:not(:last-child) {
+    margin-bottom: 40px; }
+  .card article {
+    margin: 0 0 2rem; }
+    .card article:last-child {
+      margin-bottom: 0; }
 
 @media print {
   h1 {
