--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -6,36 +6,36 @@ html, body{
 }
 
 body{
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: flex-start;
-    align-items: stretch;
     font-family: 'Muli', -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     
     // background: url('../img/bg-pattern.png') repeat;
     background: #f5f5f6;
+    @media (min-width: 800px) {
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: flex-start;
+        align-items: stretch;
+    }
 
     @media (max-width: 600px) {
         height: auto;
         flex-direction: column;
-        font-size: .85rem;
+        font-size: .95rem;
     }
 }
 
 main{
     width: 100%;
-    padding: 4rem 4rem 0;
-    overflow: scroll;
+    padding-top: 50px;
+    padding-bottom: 0;
+    padding-left: 4rem;
+    padding-right: 4rem;
+    // overflow: scroll;
 
-    > * {
-        max-width: 1200px;
+    @media (max-width: 1000px) {
+        padding-left: .25rem;
+        padding-right: .25rem;
     }
-    section{
-        border-top: 3px solid #0a99e0;
-        padding: 1rem;
-        background: #fff;
-    }
-
     @media (max-width: 620px) {
         padding-top: 2rem;
         padding-left: 2rem;
@@ -46,11 +46,15 @@ main{
         padding-left: 1rem;
         padding-right: 1rem;
     }
+
+    section{
+        padding: 1rem;
+    }
 }
 
 article{
     width: 100%;
-    margin: 0 0 2rem;
+    margin: 0;
 }
 
 .list-row{
@@ -59,16 +63,40 @@ article{
     justify-content: flex-start;
     align-items: flex-start;
     list-style: none;
+    margin: 0;
     padding-left: 0;
 
-    li{
-        margin-bottom: 20px;
+    > li{
+        width: 100%;
+        margin-bottom: 1rem;
+
+        @media (max-width: 800px){
+            padding-left: 1rem;
+        }
+
+        &:last-child{
+            margin-bottom: 0;
+        }
 
         span{
             display: block;
             font-size: .7rem;
             font-style: italic;
             color: gray;
+        }
+
+        ul{
+            li{
+                margin-bottom: .25rem;
+
+                @media (max-width: 800px){
+                    width: 100%;
+                }
+            }
+        }
+        @media (max-width: 800px){
+            width: 33.3333%;
+            margin-bottom: 2rem;
         }
     }
 }
