--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -3,9 +3,10 @@ footer {
     flex-flow: row nowrap;
     justify-content: space-between;
     align-items: flex-start;
-    padding-top: .25rem;
+    // padding-top: .25rem;
     text-align: center;
-    padding-top: 10px;
+    // padding-top: 10px;
+    margin-top: 50px;
 
     .contact {
         text-align: right;
