--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -5,7 +5,7 @@ header{
     align-items: center;
     text-align: center;
     color: #000;
-    padding: 3.25rem 2rem;
+    padding: 2rem;
     border-bottom: 1px solid #e8e8e9;
     // box-shadow: 2px 0px 20px 5px rgba(0, 0, 0, 0.3);
     // background: linear-gradient(15deg, #1e5799 0%, #076FBF 33%, #1e5799 72%, #1c398a 100%);
