--- a/scss/_type.scss
+++ b/scss/_type.scss
@@ -18,15 +18,17 @@ h2{
 }
 
 h3{
-    display: inline-block;
-    margin-bottom: 12px;
-    padding: 0 40px 0 10px;
-    border-radius: 1px;
-    background: #1e5799;
-    font-weight: 500;
+    // display: inline-block;
+    margin-bottom: 2rem;
+    // padding: 0 40px;
+    // border-radius: 1px;
+    // background: #1e5799;
+    font-size: 16px;
+    // font-weight: 500;
     text-transform: uppercase;
-    color: #fff;
-    box-shadow: 5px 5px 0px 0px rgba(53,125,163,0.35);
+    text-align: center;
+    color: rgb(169, 169, 169);
+    // box-shadow: 5px 5px 0px 0px rgba(53,125,163,0.35);
 }
 
 h4{
@@ -42,11 +44,6 @@ ul{
     margin-top: 0;
     padding-left: 1.2rem;
     font-weight: 300;
-}
-li{
-    &:not(:last-child){
-        margin-bottom: .25rem;
-    }
 }
 
 a{
